--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,10 +24,10 @@ jobs:
           java-version: "17"
 
       - name: Test and analyze
-        run: ./gradlew test jacocoTestReport sonar
+        run: ./gradlew test jacocoTestReport #sonar
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          #SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
 
   deploy:
     name: Deploying to Google Cloud
@@ -45,6 +45,7 @@ jobs:
           deliverables: app.yaml
           version: v1
           credentials: ${{ secrets.GCP_SERVICE_CREDENTIALS }}
+          #project_id: 
 
       - name: Test
         run: curl "${{ steps.deploy.outputs.url }}"
